--- a/bluchat/bluchat/Base.lproj/Main.storyboard
+++ b/bluchat/bluchat/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cZ8-Qc-j2c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="PV1-Y0-zvW">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -22,9 +22,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4BQ-Yd-x1i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1387" y="486"/>
+            <point key="canvasLocation" x="2199" y="486"/>
         </scene>
-        <!--Chats View Controller-->
+        <!--bluchat-->
         <scene sceneID="uih-Qr-hjH">
             <objects>
                 <tableViewController id="cZ8-Qc-j2c" customClass="ChatsViewController" customModule="bluchat" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,38 +32,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="hgO-k0-OyX">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f27-By-Ehq">
-                                    <rect key="frame" x="8" y="15" width="288" height="30"/>
-                                    <state key="normal" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="cZ8-Qc-j2c" eventType="touchUpInside" id="nsz-sa-sE5"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZsV-wt-dkY">
-                                    <rect key="frame" x="304" y="15" width="288" height="30"/>
-                                    <state key="normal" title="Add"/>
-                                    <connections>
-                                        <action selector="newChat:" destination="cZ8-Qc-j2c" eventType="touchUpInside" id="Azx-P8-AEH"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="ZsV-wt-dkY" secondAttribute="trailing" constant="8" id="4Ro-7C-pdq"/>
-                                <constraint firstItem="ZsV-wt-dkY" firstAttribute="centerY" secondItem="hgO-k0-OyX" secondAttribute="centerY" id="BnA-ld-wtd"/>
-                                <constraint firstItem="ZsV-wt-dkY" firstAttribute="leading" secondItem="f27-By-Ehq" secondAttribute="trailing" constant="8" id="jKm-k5-Pol"/>
-                                <constraint firstItem="f27-By-Ehq" firstAttribute="leading" secondItem="hgO-k0-OyX" secondAttribute="leading" constant="8" id="otr-MR-HgG"/>
-                                <constraint firstItem="f27-By-Ehq" firstAttribute="centerY" secondItem="hgO-k0-OyX" secondAttribute="centerY" id="uTk-gM-6AC"/>
-                                <constraint firstItem="ZsV-wt-dkY" firstAttribute="width" secondItem="f27-By-Ehq" secondAttribute="width" id="ydQ-xg-r21"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatLogCell" rowHeight="65" id="aAO-Pw-8H7" customClass="ChatLogCell" customModule="bluchat" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="600" height="65"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aAO-Pw-8H7" id="4zo-IR-c0W">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
@@ -110,8 +81,33 @@
                             <outlet property="delegate" destination="cZ8-Qc-j2c" id="WeU-gc-fID"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="bluchat" id="740-XX-S5g">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="gQd-kd-3Jr">
+                            <connections>
+                                <action selector="newChat:" destination="cZ8-Qc-j2c" id="H30-tG-oGc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qMy-6J-bIr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1515" y="486"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="SSP-zl-VCB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PV1-Y0-zvW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ffu-LQ-BQc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cZ8-Qc-j2c" kind="relationship" relationship="rootViewController" id="wpV-c3-N6R"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o2a-Nd-ipa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="703" y="486"/>
         </scene>
