--- a/bluchat/bluchat/Base.lproj/Main.storyboard
+++ b/bluchat/bluchat/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cwa-ee-CiQ">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -37,7 +36,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aAO-Pw-8H7" id="4zo-IR-c0W">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dp6-YG-oXq">
@@ -113,7 +112,7 @@
             </objects>
             <point key="canvasLocation" x="1515" y="486"/>
         </scene>
-        <!--Discover-->
+        <!--Discover View Controller-->
         <scene sceneID="waZ-Cv-aOb">
             <objects>
                 <tableViewController id="bw5-Nk-8RT" customClass="DiscoverViewController" customModule="bluchat" customModuleProvider="target" sceneMemberID="viewController">
@@ -122,7 +121,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="7u4-qo-hgW">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                            <rect key="frame" x="0.0" y="64" width="600" height="60"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QRc-S4-EeQ">
@@ -141,10 +140,10 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" rowHeight="65" id="Pl5-Rt-e8m">
-                                <rect key="frame" x="0.0" y="88" width="600" height="65"/>
+                                <rect key="frame" x="0.0" y="152" width="600" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pl5-Rt-e8m" id="zeW-uz-6mp">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -154,15 +153,15 @@
                             <outlet property="delegate" destination="bw5-Nk-8RT" id="2yO-kw-wuL"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Discover" image="discoverIcon" id="Wm4-vK-RT8"/>
+                    <navigationItem key="navigationItem" id="LDx-Z0-KMu"/>
                     <connections>
                         <outlet property="startStopAdvertisingButton" destination="QRc-S4-EeQ" id="t5h-pI-9Qm"/>
-                        <segue destination="8ow-AC-Bor" kind="show" identifier="StartChat" id="xKr-bI-wsY"/>
+                        <segue destination="lgK-9e-EkV" kind="show" identifier="StartChat" id="3Vw-Ro-mGU"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pcj-kv-uZr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2327" y="-249"/>
+            <point key="canvasLocation" x="2327" y="-270"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="XoQ-AD-QrF">
@@ -175,19 +174,53 @@
                     </tabBar>
                     <connections>
                         <segue destination="PV1-Y0-zvW" kind="relationship" relationship="viewControllers" id="LeZ-Pl-BrQ"/>
-                        <segue destination="bw5-Nk-8RT" kind="relationship" relationship="viewControllers" id="aUT-Cw-rB6"/>
+                        <segue destination="Fyq-fl-8Ys" kind="relationship" relationship="viewControllers" id="aUT-Cw-rB6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z70-Yj-MG8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="703" y="486"/>
         </scene>
+        <!--Messages View Controller-->
+        <scene sceneID="Vsx-OO-bew">
+            <objects>
+                <viewController id="lgK-9e-EkV" customClass="MessagesViewController" customModule="bluchat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZnN-NF-DhX"/>
+                        <viewControllerLayoutGuide type="bottom" id="NMM-bi-4DH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qP7-YI-aSJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qrJ-Hp-aab" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3139" y="-270"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="tIU-ts-I49">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fyq-fl-8Ys" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Discover" image="discoverIcon" id="Wm4-vK-RT8"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0hI-J1-jtq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bw5-Nk-8RT" kind="relationship" relationship="rootViewController" id="HJT-g8-tm8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tWz-hJ-gvB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1515" y="-270"/>
+        </scene>
     </scenes>
     <resources>
         <image name="chatIcon" width="32" height="32"/>
         <image name="discoverIcon" width="32" height="32"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="xKr-bI-wsY"/>
-    </inferredMetricsTieBreakers>
 </document>
