--- a/bluchat/bluchat/Base.lproj/Main.storyboard
+++ b/bluchat/bluchat/Base.lproj/Main.storyboard
@@ -168,7 +168,27 @@
                     <view key="view" contentMode="scaleToFill" id="591-y8-Q23">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Designed by Hamza Muhammad" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2g-jM-xy9">
+                                <rect key="frame" x="202" y="509" width="196" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bluchat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OC7-9b-QbX">
+                                <rect key="frame" x="202" y="95" width="196" height="72"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="U2g-jM-xy9" firstAttribute="centerX" secondItem="591-y8-Q23" secondAttribute="centerX" id="0yn-io-oav"/>
+                            <constraint firstItem="OC7-9b-QbX" firstAttribute="top" secondItem="VWe-h7-Ubi" secondAttribute="bottom" constant="75" id="Dfw-kG-q3y"/>
+                            <constraint firstItem="rAT-cE-gB6" firstAttribute="top" secondItem="U2g-jM-xy9" secondAttribute="bottom" constant="75" id="W5f-6b-1jw"/>
+                            <constraint firstItem="OC7-9b-QbX" firstAttribute="centerX" secondItem="591-y8-Q23" secondAttribute="centerX" id="lSj-f5-z30"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="cwa-ee-CiQ" kind="show" identifier="ShowMain" id="706-sp-p2n"/>
